juniper-from-schema/tests/compile_fail/invalid_stream_return_type.stderr
error: proc macro panicked
  --> $DIR/invalid_stream_return_type.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     type Query {
6  | |       ping: Boolean!
7  | |     }
...  |
21 | |     }
22 | | }
   | |_^
   |
   = help: message:

           error: Invalid stream return type. This doesn't seem to be a valid Rust type
            --> schema:3:5
             |
           3 |        users : User ! @
             |        ^

           expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> $DIR/invalid_stream_return_type.rs:26:6
   |
26 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `SubscriptionFields` in this scope
  --> $DIR/invalid_stream_return_type.rs:34:6
   |
34 | impl SubscriptionFields for Subscription {
   |      ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `QueryTrail` in this scope
  --> $DIR/invalid_stream_return_type.rs:38:13
   |
38 |         _: &QueryTrail<'r, User, Walked>,
   |             ^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
1  | use juniper_from_schema::QueryTrail;
   |

error[E0412]: cannot find type `Walked` in this scope
  --> $DIR/invalid_stream_return_type.rs:38:34
   |
38 |         _: &QueryTrail<'r, User, Walked>,
   |                                  ^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
1  | use juniper_from_schema::Walked;
   |

error[E0405]: cannot find trait `UserFields` in this scope
  --> $DIR/invalid_stream_return_type.rs:49:6
   |
49 | impl UserFields for User {
   |      ^^^^^^^^^^ not found in this scope
